--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Techniques</title>
+  </head>
+  <body>
+    <h2>Calculate the Index</h2>
+    <p>Cairo explains that visualizing the index by using an index origin and calculating
+    the percentage change from that origin can illuminate change over time. By using
+  applying the index origin and visualizing the change it becomes clear the proportion in
+which a certain statistic was influenced over period of time by one event.</p>
+    <h2>Calculate the Change Between Periods</h2>
+    <p></p>
+    <h2></h2>
+    <p></p>
+  </body>
+</html>
